public/css/style.css
/* ... */
        
        .entry-toolbar .entry-loadimages {
            display:none;
            background-image:url(images/arrow-down.png);
        }
        
        .entry-newwindow {
            background-image:url(images/open.png);
        }

        .entry-throw {
            background-image:url(images/arrow-right.png);
        }
        
        .entry-toolbar .entry-sharegoogle {
            border-left:1px solid #CCC;
            padding-left:30px;
            background-position: 10px center;
        }
        
        .entry-sharegoogle {
            background-image:url(images/googleplus.png);
        }
        
        .entry-smartphone-share li.entry-sharetwitter,
        .entry-toolbar li.entry-sharetwitter {
            background-image:url(images/twitter.png);
            background-size:16px 12px;
        }
        
        .entry-sharefacebook {
            background-image:url(images/facebook.png);
        }
        
        .entry-sharepocket {
            background-image:url(images/pocket.png);
        }

        .entry-sharereadability {
            background-image:url(images/readability.png);
        }
    
        .entry-sharedelicious {
            background-image:url(images/delicious.png);
        }

        .entry-sharewallabag {
            background-image:url(images/wallabag.png);
        }

        .entry-smartphone-share li.entry-shareemail,
        .entry-toolbar li.entry-shareemail {
            background-image:url(images/mail.png);
            background-size:16px 10px;
        }
        
        .entry-toolbar .entry-close {
            display:none;
            width:32px;
            height:32px;
            margin:0;
            position:absolute;
            left:100%;
            top:0;
            margin-left:-60px;
            background:url(images/close.png) center center no-repeat;
            background-size: 28px 28px;
        }
        
    
    .stream-more, .mark-these-read {
        margin-top:20px;
        margin-bottom:10px;
        height:35px;
        font-size:16px;
        font-weight:bold;
        cursor:pointer;
        text-align:center;
    }
    
        .touch .stream-more {
            margin-bottom:20px;
        }
        
        .stream-more.loading {
            background:url(images/ajax-loader-big.gif) center center no-repeat;
        }
        
        .stream-more.loading span {
            display:none;
        }
        
#fullscreen-entry {
    display:none;
}
        
/* sources */

.source input {
    width:60%;
}

.source-title {
    display:inline;
    color:#333333;
}

.source-error {
    color:#ff0000;
}

.source.error {
    border: 1px solid #e74c3c;
}

.source-edit-delete,
.source-action {
    display:inline;
    color:#aaa;
    text-decoration:none;
    font-size:0.8em;
}

    .source-edit-delete span,
    .source-action span {
        cursor:pointer;
    }
    
.source-edit-form {
    display:none;
    margin-left:20px;
    margin-top:10px;
    color:#888;
}

    .source-edit-form .error {
        color:#ff0000;
        font-size:0.85em;
        margin-left:4px;
    }
    
    .source-edit-form label {
        display:inline-block;
        min-width:70px;
    }
    
    .source-edit-form  .source-edit-form-help {
        color:#999;
        font-size:0.75em;
    }
    
.source-edit-delete.loadi1ng,
.source-action.loading {
    background:url(images/ajax-loader.gif) right center no-repeat;
    padding-right:25px;
}
    
.source-showparams.saved  {
    color:#0000FF;
}
    
.source-icon,
.source-icon img {
    margin-top:3px;
    margin-right:5px;
    display:block;
    float:left;
    width:16px;
    height:16px;
    text-decoration:none;
}

.source-add, .source-export {
    font-size:0.85em;
}

.source-add {
    cursor:pointer;
    margin-left:20px;
    float:left;
}

.source-export {
    margin-right: 75px;
    float: right;
    
}

.source-export,
.source-opml {
    font-size:0.60em;
    text-decoration:none;
    color:#777;
    margin-left:10px;
}

.source-new .source-edit-form {
    display:block;
}

.source-new .source-edit-delete {
    display:none;
}


/* login */

#login {
    position:absolute;
    left:50%;
    top:50%;
    margin-left:-100px;
    margin-top:-100px;
}

    #login h1 {
        background:url(images/logo.png) left center no-repeat;
        font-weight:600;
        padding-top:10px;
        padding-left:40px;
        font-size:1.4em;
        margin-bottom:20px;
    }
    
    #login label {
        display:inline-block;
        width:135px;
    }

    #login .error {
        color:#ff0000;
    }
    
    #login .button input {
        margin-left:7px;
        padding:5px;
        font-size:1.2em;
    }

/* opml import */

#opmlbody {
    height:auto;
}

#opml {
    margin-left: auto;
    margin-right: auto;
    margin-top: 150px;
    width: 500px;
}

    #opml h1 {
        background:url(images/logo.png) left center no-repeat;
        font-family:'OpenSansSemibold', Arial, sans-serif;
        padding-top:10px;
        padding-left:40px;
        font-size:1.4em;
        margin-bottom:20px;
    }

    #opml .msg {
        padding: 8px;
        border-radius:8px;
        margin-top: 15px;
    }

    #opml .error {
        background-color: #ffcccc;
    }

    #opml .success {
        background-color: #ffcc00;
    }

    #opml li.center, #opml li.button {
        text-align: center;
    }

    #opml .button input {
        margin-left:7px;
        padding:9px;
        margin-top: 30px;
        font-size:1.2em;
    }

    #opml label {
        display: inline-block;
        width: 100px;
    }

    #opml input {
        margin-top: 30px;
        background:white;
    }
    
    
/* public mode */

body.publicmode.notloggedin #nav-mark {
    height:3px;
    padding:0;
    overflow:hidden;
    cursor:auto;
}

body.publicmode.notloggedin .entry-starr,
body.publicmode.notloggedin .entry-unread {
    display:none;
}
/* ... */

